[package]
name = "checkmates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
tokyodoves = { version = "1.0.2", features = ["analysis"] }
common-lib = { path = "../common-lib" }
itertools = "0.12.1"
